--- a/styles/style.css
+++ b/styles/style.css
@@ -1,67 +1,55 @@
 :root {
-  padding: 0;
-  margin: 0;
-  color: black;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-
-  --rehab-maroon: #880000;
-  --rehab-red: #ff0000;
-  --rehab-green: #00ff00;
-  --rehab-yellow: #ffff00;
-  --rehab-white: #ffffff;
-
-  --duration-anim: 0.4s;
-  --duration-anim2: 0.8s;
 }
 
 body {
-  background-color: orange;
+  padding: 0;
+  margin: 0;
+  color: white;
 }
 
-nav {
-  background-color: var(--rehab-green);
+.has-flex {
+  padding-top: 100px;
+  padding-bottom: 100px;
   display: flex;
-  position: fixed;
-  max-width: 100%;
-  margin-left: auto;
-  margin-right: auto;
-  margin-bottom: 30px;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: center;
 }
 
-#front-image {
+.flex-item {
+  max-width: 50%;
+}
+
+.has-parallax {
+  padding: 0;
   height: 100%;
-  display: block;
-  min-width: 100%;
-  margin-left: auto;
-  margin-right: auto;
-  object-fit: cover;
+  background-size: cover;
+  background-attachment: fixed;
+  background-position: center;
+  box-shadow: 0px 5px 5px 0 rgba(0, 0, 0, 0.4) inset,
+    0px -5px 5px 0 rgba(0, 0, 0, 0.4) inset;
+  /*filter: blur(1px);
+  -webkit-filter: blur(8px);*/
 }
 
-/*svg .pyramid:hover {
-}*/
-
-svg .pyramid polygon {
-  transition: fill var(--duration-anim2);
+.mid-text {
+  margin: 0;
+  min-height: 60%;
+}
+#avatar {
+  border-radius: 100%;
+  min-width: 100px;
+  max-width: 300px;
+  height: auto;
+  border: 10px solid white;
+  box-shadow: 5px 5px 5px 5px rgba(0, 0, 0, 0.2);
+  transform-origin: center center;
+  transition: transform 0.4s, border-radius 0.35s;
+  padding: 0;
+  margin: 0;
 }
 
-svg .pyramid:hover polygon {
-  fill: white;
-  stroke-width: 4px;
-  stroke: black;
-  stroke-linejoin: round;
-}
-
-svg .pyramid .text-rect {
-  opacity: 0;
-  transform-origin: 0 0;
-  transition: transform var(--duration-anim), opacity var(--duration-anim),
-    display var(--duration-anim);
-  display: none;
-}
-
-svg .pyramid:hover .text-rect {
-  opacity: 1;
-  transform: scale(2);
-  display: block;
+#avatar:hover {
+  transform: scale(1.15);
+  border-radius: 20%;
 }
