--- a/styles/style.css
+++ b/styles/style.css
@@ -1,10 +1,75 @@
 :root {
+  --my-cyan: #39a4de;
+  --my-brown: #edb98a;
+
+  --transition-duration: 0.4s;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+}
+
+html {
+  height: 100%;
 }
 
 body {
   padding: 0;
   margin: 0;
   color: white;
+  height: 100%;
+}
+
+i {
+  padding-right: 15px;
+}
+.front-link {
+  text-decoration: none;
+  color: white;
+}
+
+.front-link:hover {
+  text-decoration: underline;
+}
+nav {
+  background-color: #3097ce;
+  box-shadow: -5px 5px 5px 10px rgba(0, 0, 0, 1);
+}
+
+nav ul {
+  font-size: 28px;
+  display: flex;
+  flex-direction: row;
+  margin: 0;
+  padding: 5px 12vw;
+  list-style-type: none;
+  justify-content: space-evenly;
+}
+
+nav ul li a {
+  text-decoration: none;
+  color: white;
+  transition: color var(--transition-duration);
+}
+
+nav ul li a:hover {
+  text-decoration: underline;
+  color: #262a2e;
+}
+
+footer {
+}
+
+main {
+  height: 100%;
+}
+
+h2 {
+  margin: 0;
+  font-size: 64px;
+}
+
+#front-card * p {
+  font-size: 32px;
+  margin-right: 20px;
 }
 
 .has-flex {
@@ -20,7 +85,28 @@ body {
   max-width: 50%;
 }
 
+.parallax-text {
+  background-color: rgba(7, 114, 172, 0.8);
+  border-radius: 5%;
+  width: 40%;
+  height: 75%;
+  margin: 7.5% 7.5% 0 7.5%;
+  float: right;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.parallax-text p {
+  --padding: 5%;
+  padding-left: var(--padding);
+  padding-right: var(--padding);
+  text-align: justify;
+}
+
 .has-parallax {
+  margin: 0;
   padding: 0;
   height: 100%;
   background-size: cover;
@@ -34,8 +120,29 @@ body {
 
 .mid-text {
   margin: 0;
+  padding: 0;
+  width: 100%;
   min-height: 60%;
+  border-radius: 0;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
+
+.mid-text h2 {
+  margin: 0;
+  padding: 0;
+  align-self: center;
+}
+
+.mid-text p {
+  margin: 0;
+  padding: 5%;
+  text-align: justify;
+}
+
 #avatar {
   border-radius: 100%;
   min-width: 100px;
@@ -44,7 +151,7 @@ body {
   border: 10px solid white;
   box-shadow: 5px 5px 5px 5px rgba(0, 0, 0, 0.2);
   transform-origin: center center;
-  transition: transform 0.4s, border-radius 0.35s;
+  transition: transform var(--transition-duration), border-radius 0.35s;
   padding: 0;
   margin: 0;
 }
@@ -52,4 +159,9 @@ body {
 #avatar:hover {
   transform: scale(1.15);
   border-radius: 20%;
+}
+
+#front-card {
+  padding-left: 5%;
+  padding-right: 5%;
 }
